<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MenuActivity">

    <data>

        <variable
            name="activity"
            type="fr.ccm.m1.android.projet.activity.MenuActivity" />

        <variable
            name="username"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/menu_localisation_avatar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="14dp"
            android:onClick="@{() -> activity.goToLocalisationAvatar()}"
            android:text="@string/localisation_avatar"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/menu_avatar_sur_tel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> activity.goToAvatarSurMonTel()}"
            android:text="@string/avatars_sur_mon_tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_ramener_avatar_btn" />

        <Button
            android:id="@+id/menu_change_config_avatar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="42dp"
            android:onClick="@{() -> activity.goToConfigAvatar()}"
            android:text="@string/changer_les_configs_de_mon_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_historique_avatar_btn" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> activity.goToEnvoyerAvatar()}"
            android:text="@string/envoyer_mon_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menu_ramener_avatar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:onClick="@{() -> activity.goToRamenerAvatar()}"
            android:text="@string/ramener_mon_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/menu_historique_avatar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> activity.goToHistoriqueVoyages()}"
            android:text="@string/voir_l_historique_des_voyages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_avatar_sur_tel_btn" />

        <Button
            android:id="@+id/menu_deconnexion_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:onClick="@{() -> activity.goToLogin()}"
            android:text="@string/d_connexion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_change_config_avatar_btn" />

        <TextView
            android:id="@+id/menu_textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:text="@{username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>