<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <data>
        <variable
            name="activity"
            type="fr.ccm.m1.android.projet.activity.LoginActivity" />
        <variable
            name="userLogin"
            type="fr.ccm.m1.android.projet.model.Login" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="145dp"
            android:layout_marginBottom="80dp"
            android:text="@string/connection"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="41dp"
            android:ems="10"
            android:hint="@string/email"
            android:text="@={userLogin.email}"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:text="@={userLogin.password}"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            android:autofillHints="" />

        <Button
            android:id="@+id/button"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:onClick="@{() -> activity.connection(userLogin.email,userLogin.password)}"
            android:text="@string/compte_existant"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="184dp"
            android:onClick="@{() -> activity.enregistrement(userLogin.email,userLogin.password)}"
            android:text="@string/nouveau_compte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
